--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
+    "base64url": "^3.0.1",
+    "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.18.1",
     "rxjs": "~6.5.4",
