almost done, promises causing issues

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,5 +8,11 @@
     "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "base64url": "^3.0.1",
+    "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^7.18.1"
+  }
 }
