--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
     "base64url": "^3.0.1",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "pg": "^7.18.1",
     "rxjs": "~6.5.4",
     "sha256": "^0.2.0",
